--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,21 +1,22 @@
 
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta charset="utf-8">
   <title>登入</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="keywords" content="fly,layui,前端社区">
   <meta name="description" content="Fly社区是模块化前端UI框架Layui的官网社区，致力于为web开发提供强劲动力">
-  <link rel="stylesheet" href="/layui/css/layui.css">
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
+  <link rel="stylesheet" th:href="@{/css/global.css}">
 </head>
 <body>
 
 <div class="fly-header layui-bg-black">
   <div class="layui-container">
     <a class="fly-logo" href="/">
-      <img src="/images/logo.png" alt="layui">
+      <img th:src="@{/images/logo.png}" alt="layui">
     </a>
     <ul class="layui-nav fly-nav layui-hide-xs">
       <li class="layui-nav-item layui-this">
@@ -31,15 +32,22 @@
     
     <ul class="layui-nav fly-nav-user">
       <!-- 未登入的状态 -->
-      <li class="layui-nav-item">
-        <a class="iconfont icon-touxiang layui-hide-xs" href="/login"></a>
-      </li>
-      <li class="layui-nav-item">
-        <a href="/login">登入</a>
-      </li>
-      <li class="layui-nav-item">
-        <a href="/reg">注册</a>
-      </li>
+      <div sec:authorize="!isAuthenticated()">
+        <li class="layui-nav-item">
+          <a th:href="@{/login}">登入</a>
+        </li>
+        <li class="layui-nav-item">
+          <a th:href="@{/reg}">注册</a>
+        </li>
+      </div>
+      <div sec:authorize="isAuthenticated()">
+        <li class="layui-nav-item">
+          <a>qqqqq</a>
+        </li>
+        <li class="layui-nav-item">
+          <a>bbbbb</a>
+        </li>
+      </div>
 <!--      <li class="layui-nav-item layui-hide-xs">-->
 <!--        <a href="/app/qq/" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" title="QQ登入" class="iconfont icon-qq"></a>-->
 <!--      </li>-->
@@ -55,22 +63,22 @@
     <div class="layui-tab layui-tab-brief" lay-filter="user">
       <ul class="layui-tab-title">
         <li class="layui-this">登入</li>
-        <li><a href="reg.html">注册</a></li>
+        <li><a th:href="@{/reg}">注册</a></li>
       </ul>
       <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
         <div class="layui-tab-item layui-show">
           <div class="layui-form layui-form-pane">
-            <form method="post">
+            <form method="post" th:action="@{/dologin}">
               <div class="layui-form-item">
-                <label for="L_email" class="layui-form-label">邮箱</label>
+                <label for="L_username" class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
-                  <input type="text" id="L_email" name="email" required lay-verify="required" autocomplete="off" class="layui-input">
+                  <input type="text" id="L_username" name="username" required lay-verify="required" autocomplete="off" class="layui-input">
                 </div>
               </div>
               <div class="layui-form-item">
-                <label for="L_pass" class="layui-form-label">密码</label>
+                <label for="L_password" class="layui-form-label">密码</label>
                 <div class="layui-input-inline">
-                  <input type="password" id="L_pass" name="pass" required lay-verify="required" autocomplete="off" class="layui-input">
+                  <input type="password" id="L_password" name="password" required lay-verify="required" autocomplete="off" class="layui-input">
                 </div>
               </div>
 <!--              <div class="layui-form-item">-->
@@ -84,9 +92,9 @@
 <!--              </div>-->
               <div class="layui-form-item">
                 <button class="layui-btn" lay-filter="*" lay-submit>立即登录</button>
-                <span style="padding-left:20px;">
-                  <a href="forget.html">忘记密码？</a>
-                </span>
+<!--                <span style="padding-left:20px;">-->
+<!--                  <a href="forget.html">忘记密码？</a>-->
+<!--                </span>-->
               </div>
               <div class="layui-form-item fly-form-app">
 <!--                <span>或者使用社交账号登入</span>-->
