--- a/src/main/resources/templates/user/information.html
+++ b/src/main/resources/templates/user/information.html
@@ -19,13 +19,15 @@
   <div class="fly-panel fly-panel-user" pad20>
     <div class="layui-tab layui-tab-brief" lay-filter="user">
       <ul class="layui-tab-title">
-        <li><a th:href="@{/login}">登入</a></li>
-        <li class="layui-this">注册</li>
+        <li class="layui-this">个人信息</li>
       </ul>
       <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
         <div class="layui-tab-item layui-show">
           <div class="layui-form layui-form-pane">
-            <form method="post" th:action="@{/doreg}">
+            <form method="post" th:action="@{/doreg}" sec:authorize="hasRole('admin')">
+              1111
+            </form>
+            <form method="post" th:action="@{/doreg}" sec:authorize="hasRole('seeker')">
               <div class="layui-form-item">
                 <label for="L_username" class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
@@ -56,6 +58,9 @@
                 <button class="layui-btn" lay-filter="formDemo" lay-submit>立即注册</button>
               </div>
             </form>
+            <form method="post" th:action="@{/doreg}" sec:authorize="hasRole('company')">
+              33333
+            </form>
           </div>
         </div>
       </div>
@@ -68,30 +73,9 @@
 
 <script th:src="@{/layui/layui.js}"></script>
 <script>
-layui.use('form', function(){
-  var form = layui.form;
-  form.verify({
-    username: function(value, item){ //value：表单的值、item：表单的DOM对象
-      if(!new RegExp("^[a-zA-Z0-9_\u4e00-\u9fa5\\s·]+$").test(value)){
-        return '用户名不能有特殊字符';
-      }
-      if(/(^\_)|(\__)|(\_+$)/.test(value)){
-        return '用户名首尾不能出现下划线\'_\'';
-      }
-      if(/^\d+\d+\d$/.test(value)){
-        return '用户名不能全为数字';
-      }
-    }
-    ,password: [
-      /^[\S]{6,12}$/
-      ,'密码必须6到12位，且不能出现空格'
-    ]
-    ,confirmPass: function (value) {
-      if (layui.$('input[name=password]').val() != value)
-        return '两次密码输入不一致！';
-    }
+  layui.use('form', function(){
+    var form = layui.form;
   });
-});
 </script>
 
 </body>
