--- a/src/main/resources/templates/seeker/company.html
+++ b/src/main/resources/templates/seeker/company.html
@@ -20,9 +20,9 @@
             <div class="fly-panel">
                 <div class="fly-panel-title fly-filter">
                     <a>公司列表</a>
-                    <form class="fly-right" method="post" th:action="@{/querycompany}">
+                    <form class="fly-right" method="post" th:action="@{/seeker/querycompany}">
                         <input type="text" name="name" class="layui-input-inline">
-                        <button class="layui-btn" lay-submit>搜索</button>
+                        <button class="layui-btn layui-btn-xs" lay-submit><i class="layui-icon layui-icon-search"></i></button>
                     </form>
                 </div>
                 <ul class="fly-list">
