--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -17,7 +17,7 @@
         <ul class="layui-clear">
             <li class="layui-hide-xs layui-this"><a th:href="@{/company/index}">首页</a></li>
             <li><a th:href="@{/company/post}">职位管理</a></li>
-            <li><a th:href="@{/}">人才搜索</a></li>
+            <li><a th:href="@{/company/seeker}">人才搜索</a></li>
             <li><a th:href="@{/}">招聘信息</a></li>
         </ul>
     </div>
