--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
     <ul class="layui-clear">
       <li class="layui-hide-xs layui-this"><a th:href="@{/}">首页</a></li>
       <li><a th:href="@{/seeker/company}">搜索公司</a></li>
-      <li><a th:href="@{/}">搜索职位</a></li>
+      <li><a th:href="@{/seeker/post}">搜索职位</a></li>
       <li><a th:href="@{/}">我的简历</a></li>
       <li><a th:href="@{/}">投递信息</a></li>
     </ul> 
@@ -168,7 +168,7 @@
       <div class="fly-panel">
         <div class="fly-panel-title fly-filter">
           <a>热门公司</a>
-          <a th:href="@{/}" class="fly-right">更多公司></a>
+          <a th:href="@{/seeker/company}" class="fly-right">更多公司></a>
         </div>
         <div class="layui-row layui-col-space15">
           <div class="layui-col-md6">
