--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,9 @@
       <li class="layui-nav-item">
         <a th:href="@{/parttimejob}"><i class="layui-icon layui-icon-search"></i>兼职信息</a>
       </li>
+      <li class="layui-nav-item">
+        <a th:href="@{/admin/index}"><i class="layui-icon layui-icon-set"></i>后台管理</a>
+      </li>
     </ul>
     
     <ul class="layui-nav fly-nav-user">
@@ -66,7 +69,7 @@
       <li><a th:href="@{/seeker/company}">搜索公司</a></li>
       <li><a th:href="@{/seeker/post}">搜索职位</a></li>
       <li><a th:href="@{/}">我的简历</a></li>
-      <li><a th:href="@{/}">投递信息</a></li>
+      <li><a th:href="@{/seeker/allcandidate}">投递信息</a></li>
     </ul> 
     
 <!--    <div class="fly-column-right layui-hide-xs"> -->
