--- a/src/main/resources/templates/company/candidate.html
+++ b/src/main/resources/templates/company/candidate.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
-    <title>人才列表</title>
+    <title>投递列表</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="比奇堡招聘网">
     <meta name="description" content="我们要成为全球最大的招聘网站">
@@ -19,36 +19,37 @@
         <div class="layui-col-md12">
             <div class="fly-panel">
                 <div class="fly-panel-title fly-filter layui-row layui-col-space10">
-                    <div class="layui-col-md2">
-                        <a>人才列表</a>
-                    </div>
-                    <div class="layui-col-md10">
+                    <div class="layui-col-md12">
+                        <a>投递列表</a>
                     </div>
                 </div>
                 <table class="layui-table" lay-skin="line">
                     <colgroup>
                         <col width="150">
                         <col width="150">
-                        <col width="600">
+                        <col width="150">
+                        <col width="500">
                         <col>
                     </colgroup>
                     <thead>
                     <tr>
-                        <th>姓名</th>
-                        <th>学历</th>
-                        <th>目标岗位</th>
+                        <th>求职者姓名</th>
+                        <th>职位名</th>
+                        <th>状态</th>
+                        <th>投递时间</th>
                         <th>操作</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="seeker:${seekerList}">
-                        <td th:text="${seeker.name}"></td>
-                        <td th:text="${seeker.education}"></td>
-                        <td th:text="${seeker.post}"></td>
+                    <tr th:each="candidate:${candidateList}">
+                        <td th:text="${candidate.seekername}"></td>
+                        <td th:text="${candidate.postname}"></td>
+                        <td th:text="${candidate.type}"></td>
+                        <td th:text="${candidate.time}"></td>
                         <td class="layui-row layui-col-space10">
-                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/file/download/}+${seeker.userid}">下载简历</a>
-                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/company/details/}+${seeker.userid}">详情</a>
-                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/company/recruit/}+${seeker.userid}">招聘</a>
+                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/file/download/}+${candidate.seekerid}">下载简历</a>
+                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/company/agree/}+${candidate.id}">同意</a>
+                            <a type="button" class="layui-btn layui-btn-xs" th:href="@{/company/refuse/}+${candidate.id}">拒绝</a>
                         </td>
                     </tr>
                     </tbody>
