--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
       <li class="layui-hide-xs layui-this"><a th:href="@{/}">首页</a></li>
       <li><a th:href="@{/seeker/company}">搜索公司</a></li>
       <li><a th:href="@{/seeker/post}">搜索职位</a></li>
-      <li><a th:href="@{/}">我的简历</a></li>
+      <li><a th:href="@{/seeker/recruit}">招聘信息</a></li>
       <li><a th:href="@{/seeker/allcandidate}">投递信息</a></li>
     </ul> 
     
@@ -91,7 +91,7 @@
       <div class="fly-panel">
         <div class="fly-panel-title fly-filter">
           <a>热门职位</a>
-          <a th:href="@{/}" class="fly-right">更多职位></a>
+          <a th:href="@{/seeker/post}" class="fly-right">更多职位></a>
         </div>
         <ul class="fly-list">
           <li>
